# nbvplanner

./: .gitmodules
interface_nbvp_rotors/: CMakeLists.txt  package.xml
interface_nbvp_rotors/launch/: flat_exploration.launch  mav_inspector.launch  multiagent_area_exploration.launch
interface_nbvp_rotors/worlds/: flat.world
multiagent_collision_check/: CMakeLists.txt
